[package]
name = "topnews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-edit = "0.9.1"
colour = "0.6.0"
serde = {version = "1.0.137", features =["derive"]}
serde_json = "1.0.81"
ureq = "2.4.0"

